--- a/app/src/main/res/layout/popup_message.xml
+++ b/app/src/main/res/layout/popup_message.xml
@@ -16,41 +16,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/edit"
+        android:padding="10dp"
         android:fontFamily="@font/klukva"
         android:textStyle="bold"
+        android:layout_marginTop="5dp"
         android:foreground="?attr/selectableItemBackground"
-        android:layout_margin="10dp"
+       android:layout_marginHorizontal="10dp"
         android:layout_gravity="center"
         android:textSize="20dp"
         android:textColor="@color/gray">
 
     </TextView>
-
-
-
-
-
-
-
-
-    <TextView
-        android:id="@+id/tv_share"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/share"
-        android:fontFamily="@font/klukva"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:layout_margin="10dp"
-        android:foreground="?attr/selectableItemBackground"
-        android:textSize="20dp"
-        android:textColor="@color/gray">
-
-    </TextView>
-
-
-
-
 
 
 
@@ -61,6 +37,8 @@
         android:text="@string/delete"
         android:fontFamily="@font/klukva"
         android:textStyle="bold"
+        android:padding="10dp"
+        android:layout_marginHorizontal="10dp"
         android:foreground="?attr/selectableItemBackground"
         android:layout_margin="10dp"
         android:layout_gravity="center"
