fixed some bugs

--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -7,7 +7,7 @@
     android:id="@+id/ll_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-  android:visibility="gone"
+android:visibility="gone"
     android:orientation="vertical"
 
     tools:context="com.emil.linksy.presentation.ui.page.UserPageActivity">
@@ -87,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/ButtonProfile"
-        app:backgroundTint="@color/blue"
+        app:backgroundTint="@color/neutral"
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal"
