implemented the display of those who liked and appreciated the post, new buttons have been added to GroupActivity.kt (leave the group and add new members)

--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -104,5 +104,21 @@
         android:text="@string/apply" >
     </com.google.android.material.button.MaterialButton>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/bt_add_members"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/green"
+        android:layout_gravity="center"
+        android:text="@string/addMembers" >
+    </com.google.android.material.button.MaterialButton>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/bt_leave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/red"
+        android:layout_gravity="center"
+        android:text="@string/leave" >
+    </com.google.android.material.button.MaterialButton>
 </LinearLayout>
