--- a/app/src/main/res/layout/relations_dialog.xml
+++ b/app/src/main/res/layout/relations_dialog.xml
@@ -29,9 +29,20 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_users"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
         android:layout_marginTop="5dp"
         >
     </androidx.recyclerview.widget.RecyclerView>
+
+ <com.google.android.material.button.MaterialButton
+    android:id="@+id/bt_invite"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:backgroundTint="@color/neutral"
+    android:visibility="gone"
+    android:layout_gravity="center"
+    android:text="@string/invite" >
+</com.google.android.material.button.MaterialButton>
 
 </LinearLayout>
