--- a/app/src/main/res/layout/activity_channel_page.xml
+++ b/app/src/main/res/layout/activity_channel_page.xml
@@ -60,6 +60,16 @@
             android:text="name">
 
         </com.google.android.material.textview.MaterialTextView>
+        <ImageView
+            android:id="@+id/iv_confirmed"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="5dp"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_confirmed">
+
+        </ImageView>
 
     </com.google.android.material.appbar.MaterialToolbar>
     <ImageView
