--- a/app/src/main/res/layout/activity_create_channel.xml
+++ b/app/src/main/res/layout/activity_create_channel.xml
@@ -70,6 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="text"
+        android:maxLength="30"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,6 +115,7 @@
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.5"
         android:layout_height="wrap_content"
+        android:maxLength="20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -158,6 +160,7 @@
         app:layout_constraintHeight_percent="0.1"
         android:inputType="textMultiLine"
         android:gravity="start|top"
+        android:maxLength="250"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
