--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -71,6 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_width="150dp"
+        android:maxLength="30"
         android:inputType="text">
     </EditText>
     <com.google.android.material.textview.MaterialTextView
