--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ll_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-android:visibility="gone"
-    android:orientation="vertical"
-
-    tools:context="com.emil.linksy.presentation.ui.page.UserPageActivity">
-
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/tb"
@@ -24,204 +17,180 @@ android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
+            android:visibility="gone"
             android:textStyle="bold"
             android:textColor="@color/link"
-            android:visibility="gone"
-            android:text="link">
-
-        </com.google.android.material.textview.MaterialTextView>
+            android:text="link"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:paddingStart="5dp"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:layout_marginBottom="10dp"
-            android:text="username">
-
-        </com.google.android.material.textview.MaterialTextView>
-
+            android:text="username"/>
 
         <ImageView
             android:id="@+id/iv_confirmed"
             android:layout_width="20dp"
+            android:visibility="gone"
             android:layout_height="20dp"
             android:layout_marginStart="5dp"
-            android:visibility="gone"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_confirmed">
-
-        </ImageView>
-
-
+            android:background="@drawable/ic_confirmed"/>
     </com.google.android.material.appbar.MaterialToolbar>
 
-    <ImageButton
-        android:id="@+id/ib_qr"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginVertical="10dp"
-        android:background="@drawable/ic_qr"
-        android:layout_gravity="center">
-
-    </ImageButton>
-
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_birthday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        android:visibility="gone"
-        android:layout_marginBottom="10dp"
-        android:text="">
-
-    </com.google.android.material.textview.MaterialTextView>
-
-
-        <ImageView
-            android:id="@+id/iv_user_avatar"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/default_avatar"
-            >
-        </ImageView>
-
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-    android:fontFamily="@font/klukva"
-        android:textColor="@color/dark_gray"
-        android:textSize="20sp"
-
-        android:text="online">
-
-    </com.google.android.material.textview.MaterialTextView>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/bt_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/ButtonProfile"
-        app:backgroundTint="@color/neutral"
-        android:textStyle="bold"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/message">
-    </com.google.android.material.button.MaterialButton>
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/bt_sub_unsub"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/ButtonProfile"
-        android:textStyle="bold"
-        app:backgroundTint="@color/gray"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/subscribe">
-    </com.google.android.material.button.MaterialButton>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-
-            
-        <LinearLayout
-            android:id="@+id/ll_subscriptions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_layout"
-            android:padding="10dp"
-            android:orientation="vertical">
-            
-            
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/subscriptions"
-                android:textStyle="bold"
-                android:fontFamily="@font/klukva"
-                android:textColor="@color/gray"
-                android:textSize="20sp">
-
-            </com.google.android.material.textview.MaterialTextView>
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_subscriptions"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="0"
-                android:layout_gravity="center"
-                android:textStyle="bold"
-                android:textSize="15sp">
-
-            </com.google.android.material.textview.MaterialTextView>
-            
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_subscribers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:padding="10dp"
-            android:background="@drawable/rounded_layout"
-            android:orientation="vertical">
-
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/subscribers"
-                android:textStyle="bold"
-                android:fontFamily="@font/klukva"
-                android:textColor="@color/gray"
-                android:textSize="20sp">
-
-            </com.google.android.material.textview.MaterialTextView>
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_subscriber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center"
-                android:textStyle="bold"
-                android:textSize="15sp">
-
-            </com.google.android.material.textview.MaterialTextView>
-
-        </LinearLayout>
-       
-
-    </LinearLayout>
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tl_profile_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:tabMode="fixed"
-        style="@style/CustomTabLayoutStyle"
-        app:tabIndicatorColor="@color/tabIndicatorColor_3"
-        />
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vp_profile_pager"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"/>
+        android:layout_below="@id/tb"
+        android:fillViewport="true">
 
-</LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical"
+            tools:context="com.emil.linksy.presentation.ui.page.UserPageActivity">
+
+            <ImageButton
+                android:id="@+id/ib_qr"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/ic_qr"
+                android:layout_gravity="center"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_birthday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:visibility="gone"
+                android:layout_marginBottom="10dp"
+                android:text=""/>
+
+            <ImageView
+                android:id="@+id/iv_user_avatar"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:src="@drawable/default_avatar"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/klukva"
+                android:textColor="@color/dark_gray"
+                android:textSize="20sp"
+                android:text="online"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/ButtonProfile"
+                app:backgroundTint="@color/neutral"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/message"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_sub_unsub"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/ButtonProfile"
+                android:textStyle="bold"
+                app:backgroundTint="@color/gray"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/subscribe"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/ll_subscriptions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_layout"
+                    android:padding="10dp"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/subscriptions"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/klukva"
+                        android:textColor="@color/gray"
+                        android:textSize="20sp"/>
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_subscriptions"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="0"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        android:textSize="15sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_subscribers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:padding="10dp"
+                    android:background="@drawable/rounded_layout"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/subscribers"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/klukva"
+                        android:textColor="@color/gray"
+                        android:textSize="20sp"/>
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_subscriber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        android:textSize="15sp"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tl_profile_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:tabMode="fixed"
+                style="@style/CustomTabLayoutStyle"
+                app:tabIndicatorColor="@color/tabIndicatorColor_3"/>
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vp_profile_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"/>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+</RelativeLayout>
