--- a/app/src/main/res/layout/add_poll_dialog.xml
+++ b/app/src/main/res/layout/add_poll_dialog.xml
@@ -53,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="text"
+        android:maxLength="100"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
