--- a/app/src/main/res/layout/add_post_dialog.xml
+++ b/app/src/main/res/layout/add_post_dialog.xml
@@ -12,64 +12,83 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_cancel">
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:text="@string/new_post">
 
-        </com.google.android.material.textview.MaterialTextView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:text="@string/new_post"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/bt_add_picture"
-            android:background="@drawable/ic_add_image"
-           android:layout_marginStart="50dp"
-            style="@style/ButtonPostPanel">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_add_picture"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_add_image"
+                style="@style/ButtonPostPanel"
+                app:layout_constraintStart_toEndOf="@id/tv_title"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="10dp" />
 
-        </com.google.android.material.button.MaterialButton>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_add_video"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_add_video"
+                style="@style/ButtonPostPanel"
+                app:layout_constraintStart_toEndOf="@id/bt_add_picture"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="10dp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/bt_add_video"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_add_audio"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_add_audio"
+                style="@style/ButtonPostPanel"
+                app:layout_constraintStart_toEndOf="@id/bt_add_video"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="10dp" />
 
-            android:background="@drawable/ic_add_video"
-            style="@style/ButtonPostPanel"
-            android:layout_marginStart="20dp">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_add_voice"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_mic_posts"
+                style="@style/ButtonPostPanel"
+                app:layout_constraintStart_toEndOf="@id/bt_add_audio"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="10dp" />
 
-        </com.google.android.material.button.MaterialButton>
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/bt_add_audio"
-            android:background="@drawable/ic_add_audio"
-            style="@style/ButtonPostPanel"
-            android:layout_marginStart="20dp">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_publish"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/ic_publish"
+                android:backgroundTint="@color/neutral"
+                android:enabled="false"
+                style="@style/ButtonPostPanel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="10dp" />
 
-        </com.google.android.material.button.MaterialButton>
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/bt_add_voice"
-            android:background="@drawable/ic_mic_posts"
-            style="@style/ButtonPostPanel"
-            android:layout_marginStart="20dp">
-
-        </com.google.android.material.button.MaterialButton>
-
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/bt_publish"
-            android:background="@drawable/ic_publish"
-            android:backgroundTint="@color/neutral"
-            android:layout_marginTop="25dp"
-           android:layout_gravity="end"
-            style="@style/ButtonPostPanel"
-            android:enabled="false"
-            android:layout_marginEnd="10dp">
-
-        </com.google.android.material.button.MaterialButton>
-
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.MaterialToolbar>
+
 
     <LinearLayout
         android:id="@+id/ll_picked_media"
@@ -215,6 +234,7 @@
         android:layout_marginHorizontal="5dp"
         android:layout_marginBottom="5dp"
         android:gravity="start"
+        android:maxLength="2500"
         android:padding="10dp"
         android:background="@drawable/rounded_edit_text_change"
         android:paddingTop="10dp"
