--- a/app/src/main/res/layout/bottom_sheet_comments.xml
+++ b/app/src/main/res/layout/bottom_sheet_comments.xml
@@ -125,6 +125,7 @@
             android:background="@drawable/message_edit_text_background"
             android:hint="@string/write_something"
             android:layout_marginStart="5dp"
+            android:maxLength="550"
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/klukva"
             android:textSize="20sp"
