--- a/app/src/main/res/layout/common_settings_dialog.xml
+++ b/app/src/main/res/layout/common_settings_dialog.xml
@@ -54,9 +54,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/klukva"
-        android:textSize="20sp"
-        android:textColor="@color/link"
+        android:textSize="25sp"
+        android:textColor="@color/gray"
         android:layout_marginTop="20sp"
+        android:padding="10dp"
         android:foreground="?attr/selectableItemBackground"
         android:layout_gravity="center"
         android:text="@string/privacyPolicy" />
