--- a/app/src/main/res/layout/error_dialog.xml
+++ b/app/src/main/res/layout/error_dialog.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/klukva"
         android:textSize="20sp"
+        android:layout_gravity="center"
         android:textColor="@color/dark_gray"
         android:layout_marginTop="5dp"
         android:text="">
