--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,9 +1,8 @@
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.emil.linksy.presentation.ui.navigation.profile.ProfileFragment">
 
@@ -11,175 +10,169 @@
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-    <com.google.android.material.appbar.MaterialToolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/shimmer_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:shimmer_colored="true"
-            app:shimmer_base_color="@color/soft_gray"
-            android:alpha="0.4"
-            android:background="@color/shimmerBackground"
-            >
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:visibility="invisible"
-                android:text="\@test_test">
-
-            </com.google.android.material.textview.MaterialTextView>
-
-        </com.facebook.shimmer.ShimmerFrameLayout>
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="@color/link"
-            android:visibility="gone"
-            android:text="">
-
-        </com.google.android.material.textview.MaterialTextView>
-
-    </com.google.android.material.appbar.MaterialToolbar>
 
 
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/shimmer_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:shimmer_colored="true"
-        app:shimmer_base_color="@color/soft_gray"
-        android:alpha="0.4"
-        android:background="@color/shimmerBackground">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="15sp"
-            android:visibility="invisible"
-            android:text="Username">
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmer_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    app:shimmer_colored="true"
+                    app:shimmer_base_color="@color/soft_gray"
+                    android:alpha="0.4"
+                    android:background="@color/shimmerBackground">
 
-        </com.google.android.material.textview.MaterialTextView>
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:visibility="invisible"
+                        android:text="test_test" />
 
-    </com.facebook.shimmer.ShimmerFrameLayout>
+                </com.facebook.shimmer.ShimmerFrameLayout>
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-       android:textColor="@color/black"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        android:text="">
-
-    </com.google.android.material.textview.MaterialTextView>
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/link"
+                    android:visibility="gone"
+                    android:text="" />
 
 
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:paddingVertical="10dp">
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/shimmer_avatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:shimmer_colored="true"
-            app:shimmer_base_color="@color/soft_gray"
-            android:alpha="0.4"
-            android:background="@drawable/shimmer_circle"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:ignore="MissingConstraints">
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/default_avatar"
-            android:visibility="invisible"
-            />
-        </com.facebook.shimmer.ShimmerFrameLayout>
-        <ImageView
-            android:id="@+id/iv_user_avatar"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/default_avatar"
-android:visibility="gone"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:ignore="MissingConstraints" />
 
 
-        <ImageButton
-            android:id="@+id/ib_qr"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/ic_qr"
-            android:visibility="gone"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/iv_user_avatar"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:ignore="MissingConstraints">
+                    <com.facebook.shimmer.ShimmerFrameLayout
+                        android:id="@+id/shimmer_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center"
+                        app:shimmer_colored="true"
+                        app:shimmer_base_color="@color/soft_gray"
+                        android:alpha="0.4"
+                        android:background="@color/shimmerBackground">
 
-        </ImageButton>
+                        <com.google.android.material.textview.MaterialTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:textSize="15sp"
+                            android:visibility="invisible"
+                            android:text="Username" />
 
-        <ImageView
-            android:id="@+id/iv_edit_user_data"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_settings"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+                    </com.facebook.shimmer.ShimmerFrameLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:visibility="gone"
+                        android:text="" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:alpha="0.1"
-        android:background="@color/black"
-        android:layout_marginTop="10dp" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="10dp"
+                        android:paddingVertical="10dp">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tl_profile_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        style="@style/CustomTabLayoutStyle"
-        app:tabIndicatorColor="@color/tabIndicatorColor_1"
-        />
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vp_profile_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"/>
+                        <com.facebook.shimmer.ShimmerFrameLayout
+                            android:id="@+id/shimmer_avatar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            app:shimmer_colored="true"
+                            app:shimmer_base_color="@color/soft_gray"
+                            android:alpha="0.4"
+                            android:background="@drawable/shimmer_circle"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent">
+
+                            <ImageView
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:src="@drawable/default_avatar"
+                                android:visibility="invisible" />
+
+                        </com.facebook.shimmer.ShimmerFrameLayout>
+
+                        <ImageView
+                            android:id="@+id/iv_user_avatar"
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:src="@drawable/default_avatar"
+                            android:visibility="gone"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" />
+
+                        <ImageButton
+                            android:id="@+id/ib_qr"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:background="@drawable/ic_qr"
+                            android:visibility="gone"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="@id/iv_user_avatar"
+                            app:layout_constraintEnd_toEndOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/iv_edit_user_data"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:layout_marginEnd="10dp"
+                            android:src="@drawable/ic_settings"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:alpha="0.1"
+                        android:background="@color/black"
+                        android:layout_marginTop="10dp" />
+
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tl_profile_navigation"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:tabMode="fixed"
+                        style="@style/CustomTabLayoutStyle"
+                        app:tabIndicatorColor="@color/tabIndicatorColor_1" />
+
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/vp_profile_pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="10dp" />
+
+
         </LinearLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
