--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -24,6 +24,7 @@
         android:id="@+id/et_username"
         style="@style/EditTextStyle"
         android:layout_marginTop="10dp"
+        android:maxLength="20"
         android:inputType="text"
         android:hint="@string/hint_username">
     </EditText>
@@ -121,25 +122,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
          />
-
         <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_privacy_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/klukva"
             android:textSize="20sp"
-            android:layout_marginEnd="4dp"
-        android:text="@string/accept_privacy_policy" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_privacy_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/klukva"
-            android:textSize="20sp"
-            android:textColor="@color/link"
-            android:foreground="?attr/selectableItemBackground"
-            android:gravity="center"
-            android:text="@string/privacy_policy" />
+          />
 
     </LinearLayout>
 
