--- a/app/src/main/res/layout/rv_item_options_creating.xml
+++ b/app/src/main/res/layout/rv_item_options_creating.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:padding="8dp"
+        android:maxLength="100"
         android:background="@drawable/rounded_edit_text"
         android:inputType="text"
         android:imeOptions="actionDone"
