--- a/app/src/main/res/layout/bottom_sheet_comments.xml
+++ b/app/src/main/res/layout/bottom_sheet_comments.xml
@@ -54,11 +54,14 @@
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_weight="1"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_height="0dp">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_comments"
             android:layout_width="match_parent"
             android:layout_weight="1"
+
             android:layout_height="0dp">
 
         </androidx.recyclerview.widget.RecyclerView>
