--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -6,12 +6,20 @@
     android:orientation="vertical"
     tools:context="com.emil.linksy.presentation.ui.navigation.feed.FeedFragment">
 
-
+<com.google.android.material.textview.MaterialTextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/recommendations"
+    android:fontFamily="@font/klukva"
+    android:textSize="20sp"
+    android:layout_margin="5dp"
+    android:textColor="@color/gray">
+</com.google.android.material.textview.MaterialTextView>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_recommendations"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="5dp"
             >
         </androidx.recyclerview.widget.RecyclerView>
 
