--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -76,19 +76,29 @@
                             android:text="Username" />
 
                     </com.facebook.shimmer.ShimmerFrameLayout>
-
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/tv_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="10dp"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:textStyle="bold"
-                        android:visibility="gone"
                         android:text="" />
-
+            <ImageView
+                android:id="@+id/iv_confirmed"
+                android:layout_width="15dp"
+                android:layout_gravity="center"
+                android:layout_height="15dp"
+                android:visibility="gone"
+                android:background="@drawable/ic_confirmed"/>
+            </LinearLayout>
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
