--- a/app/src/main/res/layout/relations_dialog.xml
+++ b/app/src/main/res/layout/relations_dialog.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="5dp"
         >
     </androidx.recyclerview.widget.RecyclerView>
