--- a/app/src/main/res/layout/rv_item_channel_posts.xml
+++ b/app/src/main/res/layout/rv_item_channel_posts.xml
@@ -27,7 +27,6 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
                 android:orientation="vertical">
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_edited"
@@ -50,7 +49,11 @@
                     android:layout_gravity="center_horizontal"
                     android:scaleType="centerCrop"
                     android:src="@drawable/default_channel_avatar" />
-
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center"
+              android:orientation="horizontal">
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_channel_name"
                     android:layout_width="wrap_content"
@@ -58,11 +61,19 @@
                     android:layout_gravity="center_horizontal"
                     android:textStyle="bold"
                     android:textColor="@color/gray"
+                    android:maxEms="5"
+                    android:gravity="center"
                     android:fontFamily="@font/klukva"
                     android:textSize="20sp"
-                    android:text="name" />
-
-
+                    android:text="" />
+                <ImageView
+                    android:id="@+id/iv_confirmed"
+                    android:layout_width="15dp"
+                    android:layout_gravity="center"
+                    android:layout_height="15dp"
+                    android:visibility="gone"
+                    android:background="@drawable/ic_confirmed"/>
+          </LinearLayout>
             </LinearLayout>
 
             <com.google.android.material.textview.MaterialTextView
@@ -70,7 +81,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:gravity="center_horizontal"
+                 android:gravity="end"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
                 android:textColor="@color/gray"
                 android:textSize="10sp"
