--- a/app/src/main/res/layout/rv_item_comments.xml
+++ b/app/src/main/res/layout/rv_item_comments.xml
@@ -44,6 +44,15 @@
         android:text="name"
         app:layout_constraintStart_toEndOf="@id/iv_avatar"
         app:layout_constraintTop_toTopOf="@id/iv_avatar" />
+    <ImageView
+        android:id="@+id/iv_confirmed"
+        android:layout_width="15dp"
+        android:layout_gravity="center"
+        android:layout_height="15dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@id/tv_name"
+        app:layout_constraintTop_toTopOf="@id/tv_name"
+        android:background="@drawable/ic_confirmed"/>
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
