--- a/app/src/main/res/layout/rv_item_posts.xml
+++ b/app/src/main/res/layout/rv_item_posts.xml
@@ -51,7 +51,11 @@
                     android:layout_gravity="center_horizontal"
                     android:scaleType="centerCrop"
                     android:src="@drawable/default_avatar" />
-
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_author_username"
                     android:layout_width="wrap_content"
@@ -62,8 +66,13 @@
                     android:fontFamily="@font/klukva"
                     android:textSize="20sp"
                     android:text="username" />
-
-
+                <ImageView
+                    android:id="@+id/iv_confirmed"
+                    android:layout_width="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_height="15dp"
+                    android:background="@drawable/ic_confirmed"/>
+                </LinearLayout>
             </LinearLayout>
 
             <com.google.android.material.textview.MaterialTextView
@@ -71,7 +80,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:gravity="center_horizontal"
+                android:gravity="end"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
             android:textColor="@color/gray"
                 android:textSize="10sp"
@@ -84,8 +94,6 @@
                 android:layout_height="25dp"
                 android:background="@drawable/ic_menu_post"
                 android:layout_gravity="end" />
-
-
         </LinearLayout>
 
 
