An additional list of unseen moments has been added to the feed, and the author's name and avatar are also displayed inside the full-screen viewing mode.

--- a/app/src/main/res/layout/fragment_subscriptions_posts_feed.xml
+++ b/app/src/main/res/layout/fragment_subscriptions_posts_feed.xml
@@ -1,13 +1,32 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.emil.linksy.presentation.ui.navigation.feed.SubscriptionsPostsFeedFragment">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginVertical="5dp"
+        android:background="@color/light_gray">
+    </View>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_moments"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="25dp"
+        android:layout_height="wrap_content">
 
-
+    </androidx.recyclerview.widget.RecyclerView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginVertical="5dp"
+        android:background="@color/light_gray">
+    </View>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
+        android:layout_marginHorizontal="10dp"
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -16,4 +35,4 @@
             android:layout_height="match_parent">
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-</FrameLayout>
+</LinearLayout>
