--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -87,7 +87,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/klukva"
-                android:textColor="@color/dark_gray"
+                android:textColor="@color/gray"
+                android:layout_marginVertical="5dp"
                 android:textSize="20sp"
                 android:text="online"/>
 
