--- a/app/src/main/res/layout/fragment_channel_posts_feed.xml
+++ b/app/src/main/res/layout/fragment_channel_posts_feed.xml
@@ -8,11 +8,13 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
+        android:layout_marginHorizontal="10dp"
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_posts"
             android:layout_width="match_parent"
+
             android:layout_height="match_parent">
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
