--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -12,14 +12,16 @@
     android:text="@string/recommendations"
     android:fontFamily="@font/klukva"
     android:textSize="20sp"
-    android:layout_margin="5dp"
+  android:layout_marginTop="10dp"
+    android:layout_marginStart="10dp"
     android:textColor="@color/gray">
 </com.google.android.material.textview.MaterialTextView>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_recommendations"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="10dp"
             >
         </androidx.recyclerview.widget.RecyclerView>
 
