added the ability to send complaints to channels and users.

--- a/app/src/main/res/layout/rv_item_message.xml
+++ b/app/src/main/res/layout/rv_item_message.xml
@@ -58,7 +58,7 @@
                     android:fontFamily="@font/klukva"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:text=""
+                    android:text="username"
                     >
                 </TextView>
         </LinearLayout>
