--- a/app/src/main/res/layout/rv_item_channel_posts.xml
+++ b/app/src/main/res/layout/rv_item_channel_posts.xml
@@ -41,14 +41,27 @@
                     android:textColor="@color/gray"
                     android:textSize="15sp"
                     android:text="@string/edited" />
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center_horizontal"
+                    >
                 <ImageView
                     android:id="@+id/iv_channel_avatar"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_gravity="center_horizontal"
                     android:scaleType="centerCrop"
                     android:src="@drawable/default_channel_avatar" />
+                    <ImageView
+                        android:id="@+id/iv_confirmed"
+                        android:layout_width="15dp"
+                        android:layout_gravity="bottom|center"
+                        android:layout_height="15dp"
+                      android:layout_marginTop="40dp"
+                        android:background="@drawable/ic_confirmed"/>
+                </FrameLayout>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
@@ -64,15 +77,9 @@
                     android:maxEms="5"
                     android:gravity="center"
                     android:fontFamily="@font/klukva"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:text="" />
-                <ImageView
-                    android:id="@+id/iv_confirmed"
-                    android:layout_width="15dp"
-                    android:layout_gravity="center"
-                    android:layout_height="15dp"
-                    android:visibility="gone"
-                    android:background="@drawable/ic_confirmed"/>
+
           </LinearLayout>
             </LinearLayout>
 
