--- a/app/src/main/res/drawable/toolbar_background.xml
+++ b/app/src/main/res/drawable/toolbar_background.xml
@@ -4,5 +4,5 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/light_gray" />
+        android:color="@color/toolbar_back" />
 </shape>
