--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -190,7 +190,7 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/vp_profile_pager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:padding="10dp"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
