--- a/app/src/main/res/layout/rv_item_message.xml
+++ b/app/src/main/res/layout/rv_item_message.xml
@@ -3,7 +3,6 @@
 <FrameLayout
     android:id="@+id/fl_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_marginHorizontal="3dp"
     android:foreground="?attr/selectableItemBackground"
@@ -12,13 +11,11 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cw_main"
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
 
 
@@ -29,6 +26,7 @@
                 android:id="@+id/ll_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/message_back"
                 android:padding="4dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
@@ -184,7 +182,6 @@
                             android:layout_height="wrap_content"
                             android:padding="2dp"
                             android:textSize="20sp"
-
                             android:textIsSelectable="true"
                             android:text=""
                             android:fontFamily="@font/klukva">
