--- a/app/src/main/res/layout/rv_item_comments.xml
+++ b/app/src/main/res/layout/rv_item_comments.xml
@@ -72,6 +72,7 @@
         android:text="comment text"
         android:textColor="@color/gray"
         android:fontFamily="@font/klukva"
+        android:textIsSelectable="true"
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_marginTop="4dp"
