--- a/app/src/main/res/layout/rv_item_posts.xml
+++ b/app/src/main/res/layout/rv_item_posts.xml
@@ -50,22 +50,26 @@
                     android:layout_gravity="center_horizontal"
                     android:scaleType="centerCrop"
                     android:src="@drawable/default_avatar" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal">
+
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_author_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:textColor="@color/gray"
                     android:fontFamily="@font/klukva"
+                    android:maxEms="7"
+                    android:text="username"
+                    android:textColor="@color/gray"
                     android:textSize="15sp"
-                    android:text="username" />
-                <ImageView
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
                     android:id="@+id/iv_confirmed"
                     android:layout_width="10dp"
                     android:layout_gravity="center_vertical"
@@ -103,6 +107,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:textIsSelectable="true"
         android:textColor="@color/dark_gray"
         android:visibility="gone"
         android:text="">
