fixed: 1. The registration page was not displayed correctly when installing a dark theme in the system. 2. When logging into the application, the page data was not loaded the first time (the launch of the Service Token has been moved to the App class) 3. The menu in the messages went beyond the boundaries of the screen

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,7 @@
 
     <style name="Theme.Linksy" parent="Base.Theme.Linksy" />
 
-    <style name="SplashScreenTheme" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="SplashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
