--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,7 +10,7 @@
 
     <style name="Theme.Linksy" parent="Base.Theme.Linksy" />
 
-    <style name="SplashScreenTheme" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="SplashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
