--- a/app/src/main/res/layout/bottom_sheet_comments.xml
+++ b/app/src/main/res/layout/bottom_sheet_comments.xml
@@ -50,22 +50,16 @@
         </FrameLayout>
     </LinearLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_height="0dp">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_comments"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-
-            android:layout_height="0dp">
+            >
 
         </androidx.recyclerview.widget.RecyclerView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 
 
