--- a/app/src/main/res/layout/bottom_sheet_comments.xml
+++ b/app/src/main/res/layout/bottom_sheet_comments.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,16 +40,7 @@
         android:text="@string/comments">
 
     </com.google.android.material.textview.MaterialTextView>
-    <ImageButton
-        android:id="@+id/ib_close"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="end"
-        android:layout_marginEnd="20dp"
-        android:backgroundTint="@color/gray"
-        android:background="@drawable/ic_close_3">
-    </ImageButton>
+
         </FrameLayout>
     </LinearLayout>
 
@@ -56,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            >
+            android:minHeight="500dp">
 
         </androidx.recyclerview.widget.RecyclerView>
 
