--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -13,6 +13,7 @@
     android:text="@string/recommendations"
     android:fontFamily="@font/klukva"
     android:textSize="20sp"
+    android:textStyle="bold"
   android:layout_marginTop="10dp"
     android:layout_marginStart="10dp"
     android:textColor="@color/gray">
