added a new icon for the rating and video player, fixed bugs

--- a/app/src/main/res/layout/activity_channel_page.xml
+++ b/app/src/main/res/layout/activity_channel_page.xml
@@ -176,11 +176,11 @@
 
                         <ImageView
                             android:id="@+id/iv_rating"
-                            android:layout_width="15dp"
-                            android:layout_height="15dp"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
                             android:layout_gravity="center"
                             app:backgroundTint="@color/gray"
-                            android:background="@drawable/ic_rating"/>
+                            android:background="@drawable/ic_star"/>
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/tv_rating"
