--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -123,7 +123,7 @@
         <FrameLayout
             android:id="@+id/fl_picture"
             android:layout_width="wrap_content"
-
+            android:visibility="gone"
             android:layout_height="wrap_content"
            >
             <ImageView
