--- a/app/src/main/res/layout/rv_item_channel.xml
+++ b/app/src/main/res/layout/rv_item_channel.xml
@@ -70,9 +70,9 @@
         android:id="@+id/tv_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3.56"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:layout_marginEnd="5dp"
         android:fontFamily="@font/klukva"
         app:layout_constraintStart_toEndOf="@id/tv_name"
         app:layout_constraintEnd_toStartOf="@id/iv_rating"
@@ -82,9 +82,9 @@
 
     <ImageView
         android:id="@+id/iv_rating"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/ic_rating"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:background="@drawable/ic_star"
         app:backgroundTint="@color/gray"
         app:layout_constraintStart_toEndOf="@id/tv_name"
         app:layout_constraintHorizontal_bias="1"
