--- a/app/src/main/res/layout/rv_item_message.xml
+++ b/app/src/main/res/layout/rv_item_message.xml
@@ -105,8 +105,7 @@
                                     android:id="@+id/ib_play"
                                     android:layout_width="30dp"
                                     android:layout_height="30dp"
-                                    android:background="@drawable/ic_play"
-                                    android:backgroundTint="@color/soft_gray"
+                                    android:background="@drawable/ic_play_video"
                                     android:layout_centerInParent="true" />
 
                             </RelativeLayout>
