--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="auth_activity_padding_horizontal">15dp</dimen>
     <dimen name="auth_activity_padding_top">10dp</dimen>
+    <dimen name="layout_margin_comment_responses">5dp</dimen>
 
 
 
