--- a/app/src/main/res/layout/activity_channel_page.xml
+++ b/app/src/main/res/layout/activity_channel_page.xml
@@ -9,7 +9,6 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.emil.linksy.presentation.ui.page.ChannelPageActivity">
@@ -25,7 +24,7 @@
                 android:id="@+id/tv_link"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
+                android:textSize="@dimen/link_text_size"
                 android:textStyle="bold"
                 android:textColor="@color/green"
                 android:visibility="gone"
