--- a/app/src/main/res/layout/rv_item_unseen_moment.xml
+++ b/app/src/main/res/layout/rv_item_unseen_moment.xml
@@ -45,8 +45,7 @@
         android:textColor="@color/gray"
         app:layout_constraintEnd_toEndOf="@id/iv_back_avatar"
         app:layout_constraintStart_toStartOf="@id/iv_back_avatar"
-        app:layout_constraintTop_toBottomOf="@id/iv_confirmed"
-        android:text="username" />
+        app:layout_constraintTop_toBottomOf="@id/iv_confirmed" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
