--- a/app/src/main/res/layout/rv_item_user.xml
+++ b/app/src/main/res/layout/rv_item_user.xml
@@ -4,8 +4,8 @@
     android:id="@+id/ll_user"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:layout_marginBottom="5dp"
+    android:padding="@dimen/rv_item_user_padding"
+    android:layout_marginBottom="@dimen/rv_item_user_margin_bottom"
     android:foreground="?attr/selectableItemBackground"
     android:orientation="horizontal">
 
@@ -15,16 +15,16 @@
         android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/iv_user_avatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/rv_item_user_avatar_size"
+        android:layout_height="@dimen/rv_item_user_avatar_size"
         android:background="@drawable/default_avatar" />
 
         <ImageView
             android:id="@+id/iv_online"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
+            android:layout_width="@dimen/rv_item_user_online_size"
+            android:layout_height="@dimen/rv_item_user_online_size"
             android:layout_gravity="end|bottom"
-            android:layout_margin="2dp"
+            android:layout_margin="@dimen/rv_item_user_online_margin"
             android:visibility="gone"
             android:background="@drawable/ic_online">
 
