--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,15 @@
     <dimen name="auth_activity_padding_horizontal">15dp</dimen>
     <dimen name="auth_activity_padding_top">10dp</dimen>
     <dimen name="layout_margin_comment_responses">5dp</dimen>
+    <dimen name="link_text_size">15sp</dimen>
+    <dimen name="video_player_close_button_size">25dp</dimen>
+    <dimen name="video_player_close_button_margin">20dp</dimen>
+    <dimen name="rv_item_user_padding">5dp</dimen>
+    <dimen name="rv_item_user_margin_bottom">5dp</dimen>
+    <dimen name="rv_item_user_avatar_size">50dp</dimen>
+    <dimen name="rv_item_user_online_size">10dp</dimen>
+    <dimen name="rv_item_user_online_margin">2dp</dimen>
+
 
 
 
